Add remote journal support
TODO: fix tests

--- a/config/templates/cluster.yaml
+++ b/config/templates/cluster.yaml
@@ -248,6 +248,12 @@ controller:
 #   plugins:
 #     rbac:
 #       enabled: true
+#   remoteJournal:
+#     enabled: true
+#     ssl: true
+#     host: example.com
+#     port: 1234
+
 
 # AWS Tags for cloudformation stack resources
 #stackTags:
